[fix] overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ background-color: var(--deep-grey);
 
 .content{
     flex-direction: column;
+    height: 100%;
 }
 
 .top .content_container{
